--- a/apps/marginfi-v2-docs/package.json
+++ b/apps/marginfi-v2-docs/package.json
@@ -18,6 +18,8 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.4",
+    "@sanity/client": "^6.28.0",
+    "@sanity/image-url": "^1.1.0",
     "@sindresorhus/slugify": "^2.1.1",
     "@tailwindcss/typography": "^0.5.10",
     "@types/mdx": "^2.0.8",
@@ -35,6 +37,7 @@
     "mdast-util-to-string": "^4.0.0",
     "mdx-annotations": "^0.1.1",
     "next": "^14.2.21",
+    "next-sanity": "^9.8.56",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
