--- a/apps/marginfi-v2-docs/studio-mrgn/package.json
+++ b/apps/marginfi-v2-docs/studio-mrgn/package.json
@@ -15,6 +15,8 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/client": "^6.28.0",
+    "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.75.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
